--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section class="hero">
       <div class="container">
           <div class="hero-content">
-              <h1>Bring Your Ideas to Life with 3D Printing</h1>
+              <h1>Bring Your Ideas to Life with 3D Printing <br> COMING SOON</h1>
               <p>Discover premium 3D models for your next printing project</p>
               <div class="hero-buttons">
                   <a href="shop.html" class="btn btn-primary">Shop Models</a>
