--- a/shop.html
+++ b/shop.html
@@ -29,7 +29,7 @@
 
   <section class="shop-hero">
       <div class="container">
-          <h1>3D Model Shop</h1>
+          <h1>3D Model Shop<br>COMING SOON</h1>
           <p>Browse our collection of premium 3D printable models</p>
       </div>
   </section>
