--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
     <section class="contact-hero">
         <div class="container">
-            <h1>Contact Us</h1>
+            <h1>Contact Us<br>COMING SOON</h1>
             <p>We'd love to hear from you. Get in touch with our team.</p>
         </div>
     </section>
