--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     <section class="about-hero">
         <div class="container">
-            <h1>About 3D PrintHub</h1>
+            <h1>About 3D PrintHub<br>COMING SOON</h1>
             <p>Revolutionizing 3D printing one model at a time</p>
         </div>
     </section>
